--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cpslab/CPSLabVRTour#readme",
   "dependencies": {
+    "imagesloaded": "^4.1.3",
     "three": "^0.80.1",
     "three-orbit-controls": "^72.0.0",
     "tween.js": "^16.3.5",
