--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify main.js -o bundle.js -d"
+    "watch": "watchify main.js -o bundle.js -d",
+    "build": "cp bundle.js build/bundle.js && cp index.html build/index.html",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cpslab/CPSLabVRTour.git"
@@ -25,6 +28,7 @@
     "watchify": "^3.7.0"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "xo": "^0.16.0"
   },
   "xo": {
